--- a/src/render_program/Makefile.am
+++ b/src/render_program/Makefile.am
@@ -5,6 +5,7 @@ INTEL_G4A =				\
 	exa_wm_src_projective.g4a 	\
 	exa_wm_src_sample_argb.g4a 	\
 	exa_wm_src_sample_a.g4a 	\
+	exa_wm_src_sample_nv12.g4a 	\
 	exa_wm_src_sample_planar.g4a 	\
 	exa_wm_mask_affine.g4a 		\
 	exa_wm_mask_projective.g4a 	\
@@ -22,6 +23,7 @@ INTEL_G4I =				\
 	exa_wm.g4i			\
 	exa_wm_affine.g4i		\
 	exa_wm_projective.g4i		\
+	exa_wm_sample_nv12.g4i		\
 	exa_wm_sample_planar.g4i	\
 	exa_wm_src_sample_argb.g4i	\
 	$(NULL)
@@ -33,6 +35,7 @@ INTEL_G4B = 				\
 	exa_wm_src_projective.g4b 	\
 	exa_wm_src_sample_argb.g4b 	\
 	exa_wm_src_sample_a.g4b 	\
+	exa_wm_src_sample_nv12.g4b 	\
 	exa_wm_src_sample_planar.g4b 	\
 	exa_wm_mask_affine.g4b 		\
 	exa_wm_mask_projective.g4b 	\
@@ -54,6 +57,7 @@ INTEL_G4B_GEN5 = 				\
 	exa_wm_src_projective.g4b.gen5 		\
 	exa_wm_src_sample_argb.g4b.gen5 	\
 	exa_wm_src_sample_a.g4b.gen5 		\
+	exa_wm_src_sample_nv12.g4b.gen5 	\
 	exa_wm_src_sample_planar.g4b.gen5 	\
 	exa_wm_mask_affine.g4b.gen5 		\
 	exa_wm_mask_projective.g4b.gen5 	\
@@ -74,6 +78,7 @@ INTEL_G5A =				\
 	exa_wm_src_projective.g5a 	\
 	exa_wm_src_sample_argb.g5a 	\
 	exa_wm_src_sample_a.g5a 	\
+	exa_wm_src_sample_nv12.g5a 	\
 	exa_wm_src_sample_planar.g5a 	\
 	exa_wm_mask_affine.g5a 		\
 	exa_wm_mask_projective.g5a 	\
@@ -94,6 +99,7 @@ INTEL_G5B = 				\
 	exa_wm_src_projective.g5b 	\
 	exa_wm_src_sample_argb.g5b 	\
 	exa_wm_src_sample_a.g5b 	\
+	exa_wm_src_sample_nv12.g5b 	\
 	exa_wm_src_sample_planar.g5b 	\
 	exa_wm_mask_affine.g5b 		\
 	exa_wm_mask_projective.g5b 	\
@@ -116,6 +122,7 @@ INTEL_G6A =				\
 	exa_wm_src_affine.g6a 		\
 	exa_wm_src_projective.g6a	\
 	exa_wm_src_sample_argb.g6a 	\
+	exa_wm_src_sample_nv12.g6a 	\
 	exa_wm_src_sample_planar.g6a 	\
 	exa_wm_src_sample_a.g6a		\
 	exa_wm_mask_affine.g6a		\
@@ -133,6 +140,7 @@ INTEL_G6B =				\
 	exa_wm_src_affine.g6b 		\
 	exa_wm_src_projective.g6b	\
 	exa_wm_src_sample_argb.g6b 	\
+	exa_wm_src_sample_nv12.g6b 	\
 	exa_wm_src_sample_planar.g6b 	\
 	exa_wm_src_sample_a.g6b		\
 	exa_wm_mask_affine.g6b		\
@@ -155,6 +163,7 @@ INTEL_G7A =				\
 	exa_wm_src_projective.g7a	\
 	exa_wm_src_sample_a.g7a		\
 	exa_wm_src_sample_argb.g7a 	\
+	exa_wm_src_sample_nv12.g7a 	\
 	exa_wm_src_sample_planar.g7a 	\
 	exa_wm_write.g7a 		\
 	exa_wm_yuv_rgb.g7a		\
@@ -169,6 +178,7 @@ INTEL_G7B =				\
 	exa_wm_src_projective.g7b	\
 	exa_wm_src_sample_a.g7b		\
 	exa_wm_src_sample_argb.g7b 	\
+	exa_wm_src_sample_nv12.g7b 	\
 	exa_wm_src_sample_planar.g7b 	\
 	exa_wm_write.g7b 		\
 	exa_wm_yuv_rgb.g7b		\
@@ -177,6 +187,7 @@ INTEL_G7B =				\
 INTEL_G8A =				\
 	exa_wm_src_affine.g8a 		\
 	exa_wm_src_sample_argb.g8a 	\
+	exa_wm_src_sample_nv12.g8a 	\
 	exa_wm_src_sample_planar.g8a 	\
 	exa_wm_write.g8a 		\
 	exa_wm_yuv_rgb.g8a		\
@@ -185,6 +196,7 @@ INTEL_G8A =				\
 INTEL_G8B =				\
 	exa_wm_src_affine.g8b 		\
 	exa_wm_src_sample_argb.g8b 	\
+	exa_wm_src_sample_nv12.g8b 	\
 	exa_wm_src_sample_planar.g8b 	\
 	exa_wm_write.g8b 		\
 	exa_wm_yuv_rgb.g8b		\
