meson: Add libdrm dependency for intel_drv
Looks like we need a libdrm dep on intel_drv. Build fails for me on
Arch.

In file included from ../src/intel_device.c:51:
/usr/include/xf86drm.h:40:10: fatal error: drm.h: No such file or directory
 #include <drm.h>

Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -92,6 +92,7 @@ intel_drv_sources = [
 
 intel_drv_deps = [
   dependency('pciaccess', version : '>= 0.10', required : true),
+  libdrm,
   xorg,
 ]
 
