--- a/src/render_program/Makefile.am
+++ b/src/render_program/Makefile.am
@@ -15,7 +15,9 @@ INTEL_G4A =				\
 	exa_wm_ca.g4a			\
 	exa_wm_ca_srcalpha.g4a		\
 	exa_wm_write.g4a 		\
+	exa_wm_yuv_rgb_bt601_full.g4a		\
 	exa_wm_yuv_rgb_bt601_limited.g4a	\
+	exa_wm_yuv_rgb_bt709_full.g4a		\
 	exa_wm_yuv_rgb_bt709_limited.g4a	\
 	exa_wm_xy.g4a			\
 	$(NULL)
@@ -46,7 +48,9 @@ INTEL_G4B = 				\
 	exa_wm_ca.g4b			\
 	exa_wm_ca_srcalpha.g4b		\
 	exa_wm_write.g4b 		\
+	exa_wm_yuv_rgb_bt601_full.g4b		\
 	exa_wm_yuv_rgb_bt601_limited.g4b	\
+	exa_wm_yuv_rgb_bt709_full.g4b		\
 	exa_wm_yuv_rgb_bt709_limited.g4b	\
 	exa_wm_xy.g4b			\
 	$(NULL)
@@ -69,7 +73,9 @@ INTEL_G4B_GEN5 = 				\
 	exa_wm_ca.g4b.gen5			\
 	exa_wm_ca_srcalpha.g4b.gen5		\
 	exa_wm_write.g4b.gen5 			\
+	exa_wm_yuv_rgb_bt601_full.g4b.gen5		\
 	exa_wm_yuv_rgb_bt601_limited.g4b.gen5		\
+	exa_wm_yuv_rgb_bt709_full.g4b.gen5		\
 	exa_wm_yuv_rgb_bt709_limited.g4b.gen5		\
 	exa_wm_xy.g4b.gen5			\
 	$(NULL)
@@ -91,7 +97,9 @@ INTEL_G5A =				\
 	exa_wm_ca.g5a			\
 	exa_wm_ca_srcalpha.g5a		\
 	exa_wm_write.g5a 		\
+	exa_wm_yuv_rgb_bt601_full.g5a		\
 	exa_wm_yuv_rgb_bt601_limited.g5a	\
+	exa_wm_yuv_rgb_bt709_full.g5a		\
 	exa_wm_yuv_rgb_bt709_limited.g5a	\
 	exa_wm_xy.g5a			\
 	$(NULL)
@@ -113,7 +121,9 @@ INTEL_G5B = 				\
 	exa_wm_ca.g5b			\
 	exa_wm_ca_srcalpha.g5b		\
 	exa_wm_write.g5b 		\
+	exa_wm_yuv_rgb_bt601_full.g5b		\
 	exa_wm_yuv_rgb_bt601_limited.g5b	\
+	exa_wm_yuv_rgb_bt709_full.g5b		\
 	exa_wm_yuv_rgb_bt709_limited.g5b	\
 	exa_wm_xy.g5b			\
 	$(NULL)
@@ -138,7 +148,9 @@ INTEL_G6A =				\
 	exa_wm_ca_srcalpha.g6a		\
 	exa_wm_noca.g6a			\
 	exa_wm_write.g6a 		\
+	exa_wm_yuv_rgb_bt601_full.g6a		\
 	exa_wm_yuv_rgb_bt601_limited.g6a	\
+	exa_wm_yuv_rgb_bt709_full.g6a		\
 	exa_wm_yuv_rgb_bt709_limited.g6a	\
 	$(NULL)
 
@@ -157,7 +169,9 @@ INTEL_G6B =				\
 	exa_wm_ca_srcalpha.g6b		\
 	exa_wm_noca.g6b			\
 	exa_wm_write.g6b 		\
+	exa_wm_yuv_rgb_bt601_full.g6b		\
 	exa_wm_yuv_rgb_bt601_limited.g6b	\
+	exa_wm_yuv_rgb_bt709_full.g6b		\
 	exa_wm_yuv_rgb_bt709_limited.g6b	\
 	$(NULL)
 
@@ -173,7 +187,9 @@ INTEL_G7A =				\
 	exa_wm_src_sample_nv12.g7a 	\
 	exa_wm_src_sample_planar.g7a 	\
 	exa_wm_write.g7a 		\
+	exa_wm_yuv_rgb_bt601_full.g7a		\
 	exa_wm_yuv_rgb_bt601_limited.g7a	\
+	exa_wm_yuv_rgb_bt709_full.g7a		\
 	exa_wm_yuv_rgb_bt709_limited.g7a	\
 	$(NULL)
 
@@ -189,7 +205,9 @@ INTEL_G7B =				\
 	exa_wm_src_sample_nv12.g7b 	\
 	exa_wm_src_sample_planar.g7b 	\
 	exa_wm_write.g7b 		\
+	exa_wm_yuv_rgb_bt601_full.g7b		\
 	exa_wm_yuv_rgb_bt601_limited.g7b	\
+	exa_wm_yuv_rgb_bt709_full.g7b		\
 	exa_wm_yuv_rgb_bt709_limited.g7b	\
 	$(NULL)
 
@@ -199,7 +217,9 @@ INTEL_G8A =				\
 	exa_wm_src_sample_nv12.g8a 	\
 	exa_wm_src_sample_planar.g8a 	\
 	exa_wm_write.g8a 		\
+	exa_wm_yuv_rgb_bt601_full.g8a		\
 	exa_wm_yuv_rgb_bt601_limited.g8a	\
+	exa_wm_yuv_rgb_bt709_full.g8a		\
 	exa_wm_yuv_rgb_bt709_limited.g8a	\
 	$(NULL)
 
@@ -209,7 +229,9 @@ INTEL_G8B =				\
 	exa_wm_src_sample_nv12.g8b 	\
 	exa_wm_src_sample_planar.g8b 	\
 	exa_wm_write.g8b 		\
+	exa_wm_yuv_rgb_bt601_full.g8b		\
 	exa_wm_yuv_rgb_bt601_limited.g8b	\
+	exa_wm_yuv_rgb_bt709_full.g8b		\
 	exa_wm_yuv_rgb_bt709_limited.g8b	\
 	$(NULL)
 
