sna/vide/textured: Rename yuv shaders to indicate they handle limited range data
Rename the current yuv->rgb shaders in anticipation of variants that
will deal with full range yuv data.

Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>

--- a/src/render_program/Makefile.am
+++ b/src/render_program/Makefile.am
@@ -15,8 +15,8 @@ INTEL_G4A =				\
 	exa_wm_ca.g4a			\
 	exa_wm_ca_srcalpha.g4a		\
 	exa_wm_write.g4a 		\
-	exa_wm_yuv_rgb_bt601.g4a	\
-	exa_wm_yuv_rgb_bt709.g4a	\
+	exa_wm_yuv_rgb_bt601_limited.g4a	\
+	exa_wm_yuv_rgb_bt709_limited.g4a	\
 	exa_wm_xy.g4a			\
 	$(NULL)
 
@@ -46,8 +46,8 @@ INTEL_G4B = 				\
 	exa_wm_ca.g4b			\
 	exa_wm_ca_srcalpha.g4b		\
 	exa_wm_write.g4b 		\
-	exa_wm_yuv_rgb_bt601.g4b	\
-	exa_wm_yuv_rgb_bt709.g4b	\
+	exa_wm_yuv_rgb_bt601_limited.g4b	\
+	exa_wm_yuv_rgb_bt709_limited.g4b	\
 	exa_wm_xy.g4b			\
 	$(NULL)
 
@@ -69,8 +69,8 @@ INTEL_G4B_GEN5 = 				\
 	exa_wm_ca.g4b.gen5			\
 	exa_wm_ca_srcalpha.g4b.gen5		\
 	exa_wm_write.g4b.gen5 			\
-	exa_wm_yuv_rgb_bt601.g4b.gen5		\
-	exa_wm_yuv_rgb_bt709.g4b.gen5		\
+	exa_wm_yuv_rgb_bt601_limited.g4b.gen5		\
+	exa_wm_yuv_rgb_bt709_limited.g4b.gen5		\
 	exa_wm_xy.g4b.gen5			\
 	$(NULL)
 
@@ -91,8 +91,8 @@ INTEL_G5A =				\
 	exa_wm_ca.g5a			\
 	exa_wm_ca_srcalpha.g5a		\
 	exa_wm_write.g5a 		\
-	exa_wm_yuv_rgb_bt601.g5a	\
-	exa_wm_yuv_rgb_bt709.g5a	\
+	exa_wm_yuv_rgb_bt601_limited.g5a	\
+	exa_wm_yuv_rgb_bt709_limited.g5a	\
 	exa_wm_xy.g5a			\
 	$(NULL)
 
@@ -113,8 +113,8 @@ INTEL_G5B = 				\
 	exa_wm_ca.g5b			\
 	exa_wm_ca_srcalpha.g5b		\
 	exa_wm_write.g5b 		\
-	exa_wm_yuv_rgb_bt601.g5b	\
-	exa_wm_yuv_rgb_bt709.g5b	\
+	exa_wm_yuv_rgb_bt601_limited.g5b	\
+	exa_wm_yuv_rgb_bt709_limited.g5b	\
 	exa_wm_xy.g5b			\
 	$(NULL)
 
@@ -138,8 +138,8 @@ INTEL_G6A =				\
 	exa_wm_ca_srcalpha.g6a		\
 	exa_wm_noca.g6a			\
 	exa_wm_write.g6a 		\
-	exa_wm_yuv_rgb_bt601.g6a	\
-	exa_wm_yuv_rgb_bt709.g6a	\
+	exa_wm_yuv_rgb_bt601_limited.g6a	\
+	exa_wm_yuv_rgb_bt709_limited.g6a	\
 	$(NULL)
 
 INTEL_G6B =				\
@@ -157,8 +157,8 @@ INTEL_G6B =				\
 	exa_wm_ca_srcalpha.g6b		\
 	exa_wm_noca.g6b			\
 	exa_wm_write.g6b 		\
-	exa_wm_yuv_rgb_bt601.g6b	\
-	exa_wm_yuv_rgb_bt709.g6b	\
+	exa_wm_yuv_rgb_bt601_limited.g6b	\
+	exa_wm_yuv_rgb_bt709_limited.g6b	\
 	$(NULL)
 
 INTEL_G7A =				\
@@ -173,8 +173,8 @@ INTEL_G7A =				\
 	exa_wm_src_sample_nv12.g7a 	\
 	exa_wm_src_sample_planar.g7a 	\
 	exa_wm_write.g7a 		\
-	exa_wm_yuv_rgb_bt601.g7a	\
-	exa_wm_yuv_rgb_bt709.g7a	\
+	exa_wm_yuv_rgb_bt601_limited.g7a	\
+	exa_wm_yuv_rgb_bt709_limited.g7a	\
 	$(NULL)
 
 INTEL_G7B =				\
@@ -189,8 +189,8 @@ INTEL_G7B =				\
 	exa_wm_src_sample_nv12.g7b 	\
 	exa_wm_src_sample_planar.g7b 	\
 	exa_wm_write.g7b 		\
-	exa_wm_yuv_rgb_bt601.g7b	\
-	exa_wm_yuv_rgb_bt709.g7b	\
+	exa_wm_yuv_rgb_bt601_limited.g7b	\
+	exa_wm_yuv_rgb_bt709_limited.g7b	\
 	$(NULL)
 
 INTEL_G8A =				\
@@ -199,8 +199,8 @@ INTEL_G8A =				\
 	exa_wm_src_sample_nv12.g8a 	\
 	exa_wm_src_sample_planar.g8a 	\
 	exa_wm_write.g8a 		\
-	exa_wm_yuv_rgb_bt601.g8a	\
-	exa_wm_yuv_rgb_bt709.g8a	\
+	exa_wm_yuv_rgb_bt601_limited.g8a	\
+	exa_wm_yuv_rgb_bt709_limited.g8a	\
 	$(NULL)
 
 INTEL_G8B =				\
@@ -209,8 +209,8 @@ INTEL_G8B =				\
 	exa_wm_src_sample_nv12.g8b 	\
 	exa_wm_src_sample_planar.g8b 	\
 	exa_wm_write.g8b 		\
-	exa_wm_yuv_rgb_bt601.g8b	\
-	exa_wm_yuv_rgb_bt709.g8b	\
+	exa_wm_yuv_rgb_bt601_limited.g8b	\
+	exa_wm_yuv_rgb_bt709_limited.g8b	\
 	$(NULL)
 
 EXTRA_DIST = 		\
