meson: s/debug/internal-debug/
'debug' is a reserved option name since meson 0.48. So we
must rename our own debug option to something else. Let's
go with 'internal-debug'.

Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -36,7 +36,7 @@ option('use-create2', type : 'boolean', value : false,
        description : 'Enable use of create2 ioctl (experimental)')
 option('async-swap', type : 'boolean', value : false,
        description : 'Enable use of asynchronous swaps (experimental)')
-option('debug', type : 'combo', value : 'no', choices : [ 'no', 'sync', 'memory', 'pixmap', 'full' ],
+option('internal-debug', type : 'combo', value : 'no', choices : [ 'no', 'sync', 'memory', 'pixmap', 'full' ],
        description : 'Enable internal debugging')
 option('xorg-module-dir', type : 'string', value : '@libdir@/xorg/modules',
        description : 'Default xorg module directory')
