sna: Shut up more compiler warns
Suppress more compiler warnings.

Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>

--- a/src/sna/meson.build
+++ b/src/sna/meson.build
@@ -131,8 +131,11 @@ sna = static_library('sna',
 		     c_args : [
 		       '-Wno-missing-field-initializers',
 		       '-Wno-unused-but-set-variable',
+		       '-Wno-expansion-to-defined',
 		       '-Wno-shift-negative-value',
 		       '-Wno-unused-parameter',
+		       '-Wno-unused-function',
+		       '-Wno-unused-variable',
 		       '-Wno-sign-compare',
 		       '-Wno-type-limits',
 		       '-Wno-clobbered',
