sna: Use -Wno-implicit-fallthrough for fb.
Use -Wno-implicit-fallthrough when building the fb code.
I'm not even sure what it's complaining about here.

Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>

--- a/src/sna/fb/meson.build
+++ b/src/sna/fb/meson.build
@@ -25,6 +25,7 @@ fb = static_library('fb',
 		      pixman,
 		    ],
 		    c_args : [
+		      '-Wno-implicit-fallthrough',
 		      '-Wno-unused-parameter',
 		      '-Wno-sign-compare',
 		    ],
