xvmc: Use -Wno-strict-aliasing
Can't be bothered to fix the strict aliasing violations in the
xvmc code. Shut up the compiler.

Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>

--- a/src/legacy/i810/xvmc/meson.build
+++ b/src/legacy/i810/xvmc/meson.build
@@ -10,6 +10,7 @@ shared_library('I810XvMC',
 	       ],
 	       c_args : [
 		 '-Wno-unused-parameter',
+		 '-Wno-strict-aliasing',
 		 '-Wno-sign-compare',
 	       ],
 	       install : true)
