sna: Use -Wno-maybe-uninitialized
The compiler seems incapable of deducing whether something
is used uninitialized or not.

Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>

--- a/src/sna/meson.build
+++ b/src/sna/meson.build
@@ -132,6 +132,7 @@ sna = static_library('sna',
 		       '-Wno-unused-but-set-variable',
 		       '-Wno-expansion-to-defined',
 		       '-Wno-shift-negative-value',
+		       '-Wno-maybe-uninitialized',
 		       '-Wno-unused-parameter',
 		       '-Wno-unused-function',
 		       '-Wno-unused-variable',
