sna: Use -Wno-clobbered
../src/sna/sna_composite.c:567:11: warning: variable ‘sx’ might be clobbered by ‘longjmp’ or ‘vfork’ [-Wclobbered]
   int16_t sx = src_x + tx - (dst->pDrawable->x + dst_x);
           ^~
etc.

I had a quick look at a few of the cases and they seemed fine to me,
so feels like gcc just being dense.

Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>

--- a/src/sna/meson.build
+++ b/src/sna/meson.build
@@ -135,5 +135,6 @@ sna = static_library('sna',
 		       '-Wno-unused-parameter',
 		       '-Wno-sign-compare',
 		       '-Wno-type-limits',
+		       '-Wno-clobbered',
 		     ],
 		     install : false)
