sna: Use -Wno-clobbered
../src/sna/sna_composite.c:567:11: warning: variable ‘sx’ might be clobbered by ‘longjmp’ or ‘vfork’ [-Wclobbered]
   int16_t sx = src_x + tx - (dst->pDrawable->x + dst_x);
           ^~
etc.

Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>

--- a/src/sna/meson.build
+++ b/src/sna/meson.build
@@ -138,5 +138,6 @@ sna = static_library('sna',
 		       '-Wno-unused-variable',
 		       '-Wno-sign-compare',
 		       '-Wno-type-limits',
+		       '-Wno-clobbered',
 		     ],
 		     install : false)
